<resources>
    <string name="app_name">Vanguard VPN</string>
    <string name="custom_payload_msg">Please enable custom payload to generate</string>
    <string name="payload_locked_msg">You are not allowed to generate payload in locked config, please [Clear Settings/Data] in main app menu and try again.</string>
    <string name="locked_msg">Configuration Locked</string>
	<string name="about">About</string>
	<string name="config">Configuration</string>
	<string name="settings">Settings</string>
	<string name="settings_ssh">SSH Settings</string>
	<string name="settings_ssh_title">Secured Shell (SSH)</string>
	<string name="settings_ssh_summary">SSH Settings</string>
	<string name="network_mobile">Radio Network</string>
	<string name="method_connection">Connection Method</string>
	<string name="rate_app">Rate</string>
	<string name="feedback">Feedback</string>
	<string name="category_forward_udp">Udp forwarding</string>
	<string name="title_forward_udp">Forward UDP</string>
	<string name="summary_forward_udp">If active, it redirects requests to the remote server. If not, UDP requests will not be resolved.</string>
	<string name="title_resolver_udp">UDP Gateway (Remote)</string>
	<string name="summary_resolver_udp">Standard (7300)</string>
	<string name="category_forward_dns">DNS Forwarding</string>
	<string name="title_forward_dns">Forward DNS </string>
	<string name="summary_forward_dns">If active, it redirects requests to the remote server. If not, DNS requests will be resolved by the local system.</string>
	<string name="title_dns_primary">Primary DNS</string>
	<string name="category_advanced_settings">Advanced Settings</string>
	<string name="title_hide_log">Hide Log on Start</string>
	<string name="summary_hide_log">If active, the log will not be shown automatically.</string>
	<string name="title_auto_clear_log">Automatically Clear Logs</string>
	<string name="summary_auto_clear_log">If active, logs are automatically cleared.</string>
	<string name="category_forward_port">Port Forwarding</string>
	<string name="title_mode_debug">Debug mode</string>
	<string name="summary_mode_debug">Allows you to see more advanced information in the logs.</string>
	<string name="category_settings_adicionais">Additional configurations</string>
	<string name="title_ping_time">Ping (seconds)</string>
	<string name="category_user_interface">User Interface</string>
	<string name="title_language">Language</string>
	<string name="category_tunnel">Tunnel</string>
	<string name="title_number_max_threads">Maximum Number of Threads</string>
	<string name="summary_number_max_threads">The greater the number of Threads, the greater the power consumption and the speed of the connection on your device.</string>
	<string name="title_mode_vpn">Send Traffic over VPN</string>
	<string name="summary_mode_vpn">If active, all traffic will be sent over the VPN.</string>
	<string name="category_filter_apps">Apps filter</string>
	<string name="title_filter_apps">Filter Apps</string>
	<string name="title_bypass_mode">Bypass Mode</string>
	<string name="summary_bypass_modo">If active, traffic from the selected applications will be sent directly.</string>
	<string name="title_apps_list">Apps List</string>
	<string name="summary_apps_list">Enter a package name by line. See Settings -> Apps for the package name of the apps.</string>
	<string name="title_tethering_subnet">Tethering Subnet (beta)</string>
	<string name="summary_tethering_subnet">"Enable it if you're having trouble sharing your device's internet."</string>
	<string name="ssh_server">SSH Host</string>
	<string name="ssh_port">SSH Port</string>
	<string name="ssh_porta_local">Local Port (Socks5)</string>
	<string name="payload">Payload:</string>
	<string name="proxy_remote">Remote Proxy</string>
	<string name="squid">HTTP Proxy (eg: Squid)</string>
	<string name="proxy_ip">Proxy IP/Host</string>
	<string name="proxy_port">Port</string>
	<string name="proxy_auth">Proxy Authentication</string>
	<string name="proxy_user">Username</string>
	<string name="proxy_pass">Password</string>
	<string name="dir_name">Folder</string>
	<string name="alert_exit">Do you want to exit or minimize?</string>
	<string name="alert_clear_settings">Are you sure you want to restore default settings?</string>
	<string name="no_value">none</string>
	<string name="blocked">Locked</string>
	<string name="expired">Expired</string>
	<string name="title_delete_file">Delete File</string>
	<string name="alert_delete_file">Do you want to delete this file?</string>
	<string name="dir_home_name">Internal Storage</string>
	<string name="select_file_setting">Select the file</string>
	<string name="title_permission_request">Permission granted</string>
	<string name="message_permission_request">Please, it is necessary to grant the necessary permission for the application to work correctly.</string>
	<string name="name_file">File name</string>
	<string name="export_button">Export</string>
	<string name="title_security">Security Lock</string>
	<string name="check_protect">Lock configuration and avoid editing</string>
	<string name="title_extra">Other settings</string>
	<string name="check_block_root">Block root</string>
	<string name="check_show_login_start">Show login to start</string>
	<string name="check_date_valid">Set expiration date</string>
	<string name="input_note_msg">Message / note for users (optional)</string>
	<string name="alert_block_settings">Setting blocking does not guarantee 100% security</string>
	<string name="error_empty_name_file">File name must not be empty</string>
	<string name="minimize">Minimize</string>
	<string name="exit">Exit</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="save">Save</string>
	<string name="open">Open</string>
	<string name="more">More</string>
	<string name="cancel">Cancel</string>
	<string name="wait">Wait</string>
	<string name="attention">Attention</string>
	<string name="ok">Ok</string>
	<string name="close">Close</string>
	<string name="open_with">Open with</string>
	<string name="clear_settings">Clear Settings/Data</string>
	<string name="clear_logs">Logs Cleared</string>
	<string name="settings_ImportExport">Configuration</string>
	<string name="settings_import">Import File</string>
	<string name="settings_export">Export File</string>
	<string name="wizard_details">Some details of Vanguard VPN</string>
	<string name="wizard_details_msg">The Vanguard VPN is a VPN client that works through an SSH server. The app itself is useless without a configuration, so it should only be used by advanced users.</string>
	<string name="payload_details">Keywords</string>
	<string name="payload_details_msg">Currently, the following keywords are supported in the connection text: %s</string>
    <string name="error_tunnel_service_execution">Stop the VPN service and try again.</string>
	<string name="error_no_supported">Function not supported on your device</string>
	<string name="error_invalid_settings">Invalid configuration</string>
	<string name="error_delete_file">Failed to delete file</string>
	<string name="error_file_config_incompatible">File not compatible</string>
	<string name="error_file_not_found">File not found</string>
	<string name="error_permission_writer_required">Write permission is required</string>
	<string name="error_date_selected_invalid">The selected day cannot be less than today</string>
	<string name="error_export_settings">"Couldn't export configuration"</string>
	<string name="success_import_settings">Setting file imported successfully</string>
	<string name="success_export_settings">Setting exported successfully</string>
	<string name="app_description">Vanguard VPN is an SSH TUNNEL client, designed to bypass local blocking and network relationship.</string>
    <string name="error_request_permission">You need access to External Storage</string>
    <string name="importing_settings">Importing Configuration</string>
    <string name="log_settings_valid">File valid until: %1$s</string>
    <string name="log_server_banner">Server message:</string>
    <string name="log_conection_lost">Connection Lost</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
	<string name="reconnect">Reconnect</string>
	<string name="stopping_service_ssh">Stopping SSH service</string>
	<string name="starting_service_ssh">Starting SSH Service</string>
    <string name="title_auth">Authentication</string>
    <string name="auth_message">Complete with SSH account details</string>
    <string name="auth_username">Username</string>
    <string name="password">Password</string>
	<string name="show_password">Show password</string>
	<string name="save_password">Save password</string>
    <string name="channel_name_background">Connection statistics</string>
    <string name="channel_description_background">Ongoing statistics of the established Vanguard VPN connection</string>
    <string name="channel_name_status">Connection status change</string>
    <string name="channel_description_status">Status changes of the Vanguard VPN connection (Connecting, authenticating,…)</string>
    <string name="channel_name_userreq">User interaction required</string>
    <string name="channel_description_userreq">Vanguard VPN connection requires a user input, e.g. two factor authentication</string>
    <string name="state_starting">Getting Started</string>
    <string name="state_connecting">Connecting...</string>
    <string name="state_wait">Waiting for server response</string>
    <string name="state_auth">Authenticating</string>
    <string name="state_auth_success">Authenticate with password</string>
    <string name="state_get_config">Getting client configuration</string>
    <string name="state_assign_ip">Assigning IP addresses</string>
    <string name="state_add_routes">Adding routes</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_reconnecting">Reconnecting...</string>
    <string name="state_stopping">Stopping...</string>
    <string name="state_noprocess">Not running</string>
    <string name="state_resolve">Resolving host names</string>
    <string name="state_tcp_connect">Connecting (TCP)</string>
	<string name="state_auth_failed">Authentication failed</string>
	<string name="state_nonetwork">Searching network</string>
    <string name="state_waitconnectretry">Waiting %ss seconds between connection attempt</string>
    <string name="state_auth_pending">Waiting for Autentication</string>
    <string name="state_user_vpn_password" translatable="false">Waiting for user VPN password</string>
    <string name="state_user_vpn_permission" translatable="false">Waiting for user permission to use VPN API</string>
    <string name="state_user_vpn_password_cancelled" translatable="false">VPN password input dialog cancelled</string>
    <string name="state_user_vpn_permission_cancelled" translatable="false">VPN API permission dialog cancelled</string>
    <string name="unknown_state">Unknown Status</string>
    <string name="nought_alwayson_warning"><![CDATA[If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS]]></string>
    <string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
    <string name="state_proxy_running">Running - Proxy Thread</string>
    <string name="ssh_connecting">Injecting</string>
	<string name="direct">SSH → Direct</string>
	<string name="http">SSH → HTTP Proxy</string>
	<string name="ssl">SSH → SSL/TLS</string>
	<string name="slowdns">SSH → SlowDNS</string>
	<string name="user_authentication">User Authentication</string>
	<string name="pay_gen">Payload Generator</string>
    <string name="donate">Donate</string>
    <string name="opensource">Get Source Code</string>
</resources>