<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:key="screenMain">
	<PreferenceCategory
		android:title="@string/category_forward_udp">

		<CheckBoxPreference
			android:key="udpForward"
			android:title="@string/title_forward_udp"
			android:defaultValue="false"
			android:summary="@string/summary_forward_udp" />
		
		<com.vanguard.vpn.view.SummaryEditTextPreference
            android:key="udpResolver"
            android:title="@string/title_resolver_udp"
            android:summary="@string/summary_resolver_udp"
            android:dialogMessage=""
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix" />

	</PreferenceCategory>


	<PreferenceCategory
		android:title="@string/category_forward_dns">

		<CheckBoxPreference
			android:key="dnsForward"
			android:title="@string/title_forward_dns"
			android:summary="@string/summary_forward_dns" />

		<com.vanguard.vpn.view.SummaryEditTextPreference
            android:key="dnsResolver"
            android:title="@string/title_dns_primary"
            android:defaultValue="8.8.8.8"
			android:dialogLayout="@layout/pref_dialog_edittext_fix" />

	</PreferenceCategory>


	<PreferenceCategory
		android:title="@string/category_settings_adicionais">	
		
		<com.vanguard.vpn.view.SummaryEditTextPreference
            android:key="pingerSSH"
            android:title="@string/title_ping_time"
			android:maxLength="3"
            android:summary="@string/title_ping_time"
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_number"
		/>

		<CheckBoxPreference
			android:key="autoClearLogs"
			android:title="@string/title_auto_clear_log"
			android:defaultValue="true"
			android:summary="@string/summary_auto_clear_log"
			android:singleLine="true"
		/>

		<CheckBoxPreference
			android:key="hideLog"
			android:title="@string/title_hide_log"
			android:summary="@string/summary_hide_log"
		/>
	
		<ListPreference
        	android:key="idioma"
			android:defaultValue="default"
        	android:entries="@array/pref_idioma_option_labels"
        	android:entryValues="@array/pref_idioma_option_values"
        	android:title="@string/title_language"
		/>

	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/category_user_interface">
	
		<ListPreference
        	android:key="modeNight"
			android:defaultValue="off"
        	android:entries="@array/pref_modoNoturno_option_labels"
        	android:entryValues="@array/pref_modoNoturno_option_values"
        	android:title="Night Mode"
		/>
		
	</PreferenceCategory>
	
	
	<Preference
    	android:key="screenAdvancedSettings"
		app:fragment="com.vanguard.vpn.preference.SettingsAdvancedPreference"
        android:title="@string/category_advanced_settings"/>
	
	
</PreferenceScreen>
