<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:padding="?dialogPreferredPadding"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_marginBottom="5dp">

		<TextView
			android:textColor="#FF000000"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="Proxy Remoto"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/squid"
			android:textColor="#FF000000"
			android:layout_marginBottom="15dp"
			android:layout_marginTop="8dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/fragment_proxy_remoteProxyIpEdit"
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:inputType="text"
					android:ems="9"
					android:hint="@string/proxy_ip"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="3.0">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/fragment_proxy_remoteProxyPortaEdit"
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:ems="4"
					android:inputType="number"
					android:hint="@string/proxy_port"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

